--- a/www/lib/angular-moment/package.json
+++ b/www/lib/angular-moment/package.json
@@ -7,7 +7,7 @@
     "url": "http://github.com/urish/angular-moment.git"
   },
   "dependencies": {
-    "moment": ">=2.8.0 <2.11.0"
+    "moment": ">=2.19.3"
   },
   "devDependencies": {
     "bower": "^1.3.12",
